.backdrop {   width: 100%;   height: 100%;   position: fixed;   padding: 72px 24px 24px 24px;   top: 0;   left: 0;   background-color: #2e2f4266;   transition: opacity 250ms cubic-bezier(0.4, 0, 0.2, 1),     visibility 250ms cubic-bezier(0.4, 0, 0.2, 1); } .modal {   width: 408px;   min-height: 584px;   border-radius: 4px;   background-color: #fcfcfc;   position: absolute;   top: 50%;   left: 50%;   transform: translate(-50%, -50%);   padding: 24px 24px 72px;   box-shadow: 0px 1px 1px rgba(0, 0, 0, 0.14), 0px 1px 3px rgba(0, 0, 0, 0.12),     0px 2px 1px rgba(0, 0, 0, 0.2);   transition: transform 250ms cubic-bezier(0.4, 0, 0.2, 1); }  .modal-close-btn {   position: absolute;   margin-left: auto;   top: 24px;   right: 24px;   width: 24px;   height: 24px;    border-radius: 50%;   display: flex;   align-items: center;   justify-content: center;   background-color: #e7e9fc;   border: 1px solid rgba(0, 0, 0, 0.1);   cursor: pointer;   transition: background-color 250ms cubic-bezier(0.4, 0, 0.2, 1),     border 250ms cubic-bezier(0.4, 0, 0.2, 1); }  .modal-close-btn:focus, .modal-close-btn:hover {   background-color: #404bbf;   border: none; } .modal-close-btn:hover .modal-icon-close, .modal-close-btn:focus .modal-icon-close {   fill: #ffffff;   border: none; }

--- a/css/styles.css
+++ b/css/styles.css
@@ -583,6 +583,7 @@ ul {
   width: 100%;
   height: 100%;
   position: fixed;
+  padding: 72px 24px 24px 24px;
   top: 0;
   left: 0;
   background-color: #2e2f4266;
@@ -598,7 +599,7 @@ ul {
   top: 50%;
   left: 50%;
   transform: translate(-50%, -50%);
-  padding: 24px 24px 72px;
+  padding: 24px;
   box-shadow: 0px 1px 1px rgba(0, 0, 0, 0.14), 0px 1px 3px rgba(0, 0, 0, 0.12),
     0px 2px 1px rgba(0, 0, 0, 0.2);
   transition: transform 250ms cubic-bezier(0.4, 0, 0.2, 1);
